
ChangeLog
 [ + added, - removed, * changed ]
 + 06Sep2021 Adds missing wrapper for __kmpc_critical_with_hint
 * 05Aug2021 Creates new event handler for ADD_RESERVED_MEM_EV and SUB_RESERVED_MEM_EV 
 * 05Aug2021 Fix wrong arguments for mpi_win_lock and mpi_compare_and_swap wrappers
 * 03Aug2021 Makes CPUID event start at 1
 * 03Aug2021 Sampling temporal files not created if disabled in XML
 + 03Aug2021 Reads PC on RISC-V architecture to add support for time sampling
 * 06Jul2021 Adds L3 store misses offcore counter PEBS sampling (closes #62)
 * 06Jul2021 Adds new option ([-no]-translate-data-addresses) to mpi2prv (closes #61)
 * 06Jul2021 Fixes calloc() behaviour (closes #60)
 * 06Jul2021 Fixes realloc comment in mpi2prv (closes #59)
 * 06Jul2021 Fix for missing symbols of libraries loaded dynamically (closes #58) 
 + 27May2021 Adds support for MPI_Dist_graph_create_adjacent and fixes bug in xtr_MPI_Comm_neighbors_count parameters 
 * 26Jan2021 Checks if EXTRAE_PY_CEVENTS is not empty before checking its value
 + 29Sep2020 Adds configure option to disable instrumentation of pthread_cond_* calls
 * 21Aug2020 Fixes bug instrumenting user code inside OpenMP
 * 19Aug2020 Fixes wrong exit event in cudaFree and cudaMemset
 * 12Aug2020 Modifications to support CUDA10
 + 14Jul2020 Adds missing wrappers/CUPTI and a catch-all for CUPTI uninstrumented routines
 + 03Jul2020 Adds Makefile.extrae_module to distribution to compile extrae_module.f90
 + 29Jun2020 Adds instrumentation for close and fclose IO calls
 * 25Jun2020 Changes call to MPI_Barrier into PMPI_Barrier
 * 23Jun2020 Fixes wrong JAVAH definition and conditional check
 * 23Jun2020 Fixes for dyninst make check tests and configure checks for libsynapse
 * 23Jun2020 Forces exit on second termination signal
 * 22Jun2020 Changes to use new binutils >= 2.34 API
 * 22Jun2020 Changes merger block distribution to avoid processes with 0 traces
 * 22Jun2020 Fixes checks for `javah` to compile Extrae with JDK > 9